# nexmark-py

./: .gitignore  Cargo.toml  README.md  benchmark.py  generate.py  main.py  nexmark.pyi  pyproject.toml
src/: lib.rs
tests/: test_all.py  test_stream.py
