[package]
name = "nexmark-py"
authors = ["Michael Noguera <44954999+michaelnoguera@users.noreply.github.com>"]
version = "0.1.1"
edition = "2021"
description = "Incomplete python bindings for the nexmark-rs crate. Not actively maintained, but contributions welcome."
repository = "https://github.com/michaelnoguera/nexmark-py"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[lib]
name = "nexmark"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py311", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
nexmark = { version = "0.2.0", features = ["serde", "serde_json"] }
serde_json = "1.0.145"

[build-dependencies]
pyo3-build-config = "0.27.1"
